this should work i hope

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
                 <div class=" flex px-4 py-4 relative justify-start InputFields ">
                     <label class="px-1 py-1 mx-4 text-3xl" for="Name">Name</label>
                     <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 
-                     border-black border-2" required type="text" name="userName" id="Name">
+                     border-black border-2" required type="text" name="userName" id="name">
                 </div>
 
                 <!-- EMAIL -->
                 <div class="flex px-4 py-4 relative justify-start InputFields">
                     <label class="px-1 py-1 mx-4 text-3xl" for="Email">Email</label>
-                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="email" name="userEmail" id="Email" required>
+                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="email" name="userEmail" id="email" required>
                 </div>
 
                 <!-- PASSWORD -->
                 <div class="flex px-4 py-4 relative justify-start InputFields">
                     <label class="px-1 py-1 mx-4 text-3xl" for="Password">Password</label>
-                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="password" name="userPassword" id="Password" required>
+                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="password" name="userPassword" id="password" required>
                 </div>
 
                 <!-- DATE OF BIRTH -->
                 <div class="flex px-4 py-4 relative justify-start InputFields">
                     <label class="px-1 py-1 mx-4 text-3xl" for="DOB">Date Of Birth</label>
-                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="date" name="userDOB" id="DOB" required min="1968-08-08" max="2005-08-08" >
+                    <input class="px-1 py-1 text-3xl w-3/5 absolute right-0 border-black border-2" type="date" name="userDOB" id="dob" required min="1968-08-08" max="2005-08-08" >
                 </div>
 
                 <!-- CHECK BOX -->
